# PF_US_ESP32

./: .gitignore  CMakeLists.txt  README.md
Borradores/: Prueba_sensor_CO2
main/: ALARMAS_USUARIO.h  APP_CO2.c  APP_CO2.h  APP_DHT11.c  APP_DHT11.h  APP_LEVEL_SENSOR.c  APP_LEVEL_SENSOR.h  APP_LIGHT_SENSOR.c  APP_LIGHT_SENSOR.h  AUXILIARES_ALGORITMO_CONTROL_BOMBEO_SOLUCION.c  AUXILIARES_ALGORITMO_CONTROL_BOMBEO_SOLUCION.h  AUXILIARES_ALGORITMO_CONTROL_TDS_SOLUCION.c  AUXILIARES_ALGORITMO_CONTROL_TDS_SOLUCION.h  AUXILIARES_ALGORITMO_CONTROL_TEMP_SOLUCION.c  AUXILIARES_ALGORITMO_CONTROL_TEMP_SOLUCION.h  AUXILIARES_ALGORITMO_CONTROL_pH_SOLUCION.c  AUXILIARES_ALGORITMO_CONTROL_pH_SOLUCION.h  CMakeLists.txt  CO2_SENSOR.c  CO2_SENSOR.h  DEBUG_DEFINITIONS.h  DHT11_SENSOR.c  DHT11_SENSOR.h  DS18B20_SENSOR.c  DS18B20_SENSOR.h  FLOW_SENSOR.c  FLOW_SENSOR.h  LIGHT_SENSOR.c  LIGHT_SENSOR.h  MCP23008.c  MCP23008.h  MEF_ALGORITMO_CONTROL_BOMBEO_SOLUCION.c  MEF_ALGORITMO_CONTROL_BOMBEO_SOLUCION.h  MEF_ALGORITMO_CONTROL_TDS_SOLUCION.c  MEF_ALGORITMO_CONTROL_TDS_SOLUCION.h  MEF_ALGORITMO_CONTROL_TEMP_SOLUCION.c  MEF_ALGORITMO_CONTROL_TEMP_SOLUCION.h  MEF_ALGORITMO_CONTROL_pH_SOLUCION.c  MEF_ALGORITMO_CONTROL_pH_SOLUCION.h  MQTT_PUBL_SUSCR.c  (+14 more)
