idf_component_register(SRCS     "DS18B20_SENSOR.c" "DHT11_SENSOR.c" "TDS_SENSOR.c" 
                                "pH_SENSOR.c" "FLOW_SENSOR.c" "CO2_SENSOR.c" 
                                "ultrasonic_sensor.c" "MCP23008.c" "WiFi_STA.c" 
                                "MQTT_PUBL_SUSCR.c" "main.c"
                    INCLUDE_DIRS ".")
