idf_component_register(SRCS     "DS18B20_SENSOR.c" "DHT11_SENSOR.c" "TDS_SENSOR.c" 
                                "pH_SENSOR.c" "FLOW_SENSOR.c" "CO2_SENSOR.c" 
                                "ultrasonic_sensor.c" "MCP23008.c" "WiFi_STA.c" 
                                "MQTT_PUBL_SUSCR.c" "main.c" "AUXILIARES_ALGORITMO_CONTROL_TDS_SOLUCION.c"
                                "MEF_ALGORITMO_CONTROL_TDS_SOLUCION.C"
                    INCLUDE_DIRS ".")
